# thinky-dev-productivity

./: .gitignore  README.md  config.yaml.example  setup.sh
configs/claude-code/: settings.json  setup.sh
configs/codex/: config.toml  setup.sh
configs/cursor/: ONBOARDING.md  setup.sh
configs/cursor/rules/: org-standards.mdc
containers/: .zshrc  Dockerfile  build.sh  devcontainer.json  env.example  post_install.py  run.sh
remote/: pyproject.toml
remote/thinky_remote/: __init__.py  api.py  cli.py  config.py
remote/thinky_remote/templates/: cloud-init.yaml
